--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -50,7 +50,7 @@
           <a class="nav-link nav-link-animated" routerLink="/shop" routerLinkActive="active">Shop</a>
         </li>
         <li class="nav-item" routerLinkActive="active">
-          <a class="nav-link nav-link-animated" routerLink="/login" routerLinkActive="active">login</a>
+          <a class="nav-link nav-link-animated" routerLink="/contact-us" routerLinkActive="active">contact</a>
         </li>
         <!-- <li class="nav-item" routerLinkActive="active">
           <a class="nav-link nav-link-animated" routerLink="/characters" routerLinkActive="active">Characters</a>
