--- a/src/app/admin-dashboard/admin-navbar/admin-navbar.component.css
+++ b/src/app/admin-dashboard/admin-navbar/admin-navbar.component.css
@@ -11,7 +11,7 @@ body {
 }
 
 .nav {
-  background-color: rgba(255, 255, 255, 0.336);
+  background-color: #e9f8ff75;
   backdrop-filter: blur(30px);
   box-shadow: 0px 0px 30px rgba(227, 228, 237, 0.37);
   border: solid 2px rgba(225, 225, 225, 0.18);
@@ -30,9 +30,16 @@ body {
   margin-bottom: 12px;
   width: 100%;
   /* border: 1px solid red ; */
+  background-color: #E9F8FF;
+  color: black;
+}
+.nav .nav-link:hover{
+  background-color: #3958c7;
+  color: white;
 }
 .nav .nav-link .bi{
   display: none;
+  color: white;
 }
 .nav-link p{
   margin: 0;
@@ -42,7 +49,7 @@ body {
 }
 
 .nav-link.active {
-  background-color: #0d6efd;
+  background-color: #6486FF !important;
   color: #fff !important;
   border-radius: 8px;
   font-weight: 600;
