--- a/src/app/admin-dashboard/admin-navbar/admin-navbar.component.html
+++ b/src/app/admin-dashboard/admin-navbar/admin-navbar.component.html
@@ -13,10 +13,10 @@
       </p>
     </a>
 
-    <a routerLink="/add-product" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }" class="nav-link">
+    <a routerLink="/app-admin-orders" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }" class="nav-link">
       <i class="bi bi-plus-circle-dotted"></i>
       <p>
-        Add Product
+        Orders
       </p>
     </a>
     <a routerLink="/admin-products" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }"
