--- a/src/app/admin-dashboard/admin-navbar/admin-navbar.component.html
+++ b/src/app/admin-dashboard/admin-navbar/admin-navbar.component.html
@@ -25,8 +25,15 @@
       <p>
         Products
       </p>
+    </a> <a routerLink="/contact-messages" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }"
+      class="nav-link">
+      <i class="bi bi-plus-circle-dotted"></i>
+      <p>
+        Feed Back
+      </p>
     </a>
 
   </div>
   <p style="font-size: 0.8rem">&#169;Patarif - 2022</p>
 </div>
+
